--- a/web-site/timetable-mirea/src/components/header/header.css
+++ b/web-site/timetable-mirea/src/components/header/header.css
@@ -30,7 +30,8 @@ body {
     background-color: #EDEEF0;
 }
 
-/*  HEADER  */
+/* Настройки header */
+
 header {
     z-index: 5;
     display: -webkit-box;
@@ -225,167 +226,4 @@ main {
 
 .registration_button:hover {
     color: black;
-}
-
-/* Стили для timetable */
-
-.timetable_main {
-    z-index: 7;
-    width: 100vw;
-    display: -webkit-box;
-    display: flex;
-    -webkit-box-align: center;
-    align-items: center;
-    align-content: space-around;
-    -webkit-box-pack: justify;
-    justify-content: space-around;
-}
-
-.timetable_panel {
-    z-index: 7;
-    width: 15vw;
-    height: 93vh;
-    padding-left: 1vw;
-    padding-right: 1vw;
-    display: -webkit-box;
-    display: flex;
-    -webkit-box-align: center;
-    align-items: center;
-    align-content: space-around;
-    -webkit-box-pack: justify;
-    justify-content: space-around;
-    background-color: #FFFFFF;
-}
-
-.timetable_panel_wrapper {
-    z-index: 7;
-    width: 100%;
-    height: 60%;
-    display: -webkit-box;
-    display: flex;
-    flex-direction: column;
-    -webkit-box-align: center;
-    align-items: center;
-    align-content: space-around;
-    -webkit-box-pack: center;
-    justify-content: space-around;
-    background-color: #FFFFFF;
-}
-
-.timetable_body {
-    z-index: 7;
-    width: 85vw;
-    height: 90vh;
-    display: -webkit-box;
-    display: flex;
-    -webkit-box-align: center;
-    align-items: center;
-    align-content: space-around;
-    -webkit-box-pack: justify;
-    justify-content: space-around;
-}
-
-.timetable_body_wrapper {
-    z-index: 7;
-    width: 90%;
-    display: -webkit-box;
-    display: flex;
-    -webkit-box-align: center;
-    align-items: center;
-    align-content: space-around;
-    -webkit-box-pack: justify;
-    justify-content: space-around;
-}
-
-.timetable_table {
-    z-index: 7;
-    border-spacing: 0;
-}
-
-.timetable_elem {
-    z-index: 7;
-    text-align: center;
-    border-bottom: 1px solid #F4EEE8;
-    transition: all 0.5s linear;
-}
-
-.timetable_elem:first-child {
-    text-align: left;
-    color: #3D3511;
-    font-weight: bold;
-}
-
-.timetable_body_header {
-    z-index: 7;
-    padding: 10px 20px;
-    color: #3D3511;
-    font-size: 24px;
-    text-align: center;
-    border-bottom: 1px solid #F4EEE8;
-    border-top-left-radius: 10px;
-    border-top-right-radius: 10px;
-}
-
-.timetable_elem:nth-child(even) {
-    background: #F6D27E;
-}
-
-.timetable_elem:nth-child(odd) {
-    background: #D1C7BF;
-}
-
-.timetable_body_header:nth-child(even)  {
-    background: #F6D27E;
-}
-
-.timetable_body_header:nth-child(odd)  {
-    background: #D1C7BF;
-}
-
-/* .timetable_elem:first-child {
-    border-top-left-radius: 5px;
-}
-.timetable_elem:last-child {
-    border-bottom-left-radius: 5px;
-} */
-
-.timetable_elem:hover {
-    background-color: #f1f1f1;
-}
-
-.timetable_type_info {
-    z-index: 7;
-    padding-bottom: 10px;
-    color: #3D3511;
-    font-size: 24px;
-    text-align: center;
-}
-
-.change_type_info {
-    padding: 0;
-    border: none;
-    font: inherit;
-    color: inherit;
-    background-color: transparent;
-    /* отображаем курсор в виде руки при наведении; некоторые
-    считают, что необходимо оставлять стрелочный вид для кнопок */
-}
-
-.main_page {
-    display: flex; 
-    flex-direction: column;
-    padding: 30px;
-}
-
-.main_page h1{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    padding: 20px;
-}
-
-.main_page p{
-    font-size: 24px;
-    padding: 10px;
-    padding-left: 30px;
 }
