--- a/web-site/timetable-mirea/src/pages/Setting/Setting.module.css
+++ b/web-site/timetable-mirea/src/pages/Setting/Setting.module.css
@@ -2,8 +2,7 @@
   position: relative;
   width: 100vw;
   height: 92vh;
-  top:8vh;
-  background: #393E41;
+  background: var(--background-color-main);
   display: flex;
   justify-content: center;
   text-align: center;
@@ -30,7 +29,7 @@
   font-weight: 500;
   font-size: 20px;
   line-height: 40px;
-  color: #F6F7EB;
+  color: var(--color-text);
 }
 
 .table{
@@ -52,4 +51,10 @@
   justify-content:left;
   align-items:baseline;
   text-align: center;
+}
+
+button{
+  background-color: #42494D;
+  border: 0.5px solid #3F88C5;
+  border-radius: 10px;
 }
