--- a/web-site/timetable-mirea/src/pages/TimeTable/TimeTable.css
+++ b/web-site/timetable-mirea/src/pages/TimeTable/TimeTable.css
@@ -2,8 +2,7 @@
     position: relative;
     width: 100vw;
     height: 92vh;
-    top:8vh;
-    background: #393E41;
+    background: var(--background-color-main);
     display: flex;
 }
 
@@ -12,13 +11,9 @@
     position: relative;
     left: 1%;
     top: 3%;
-    width: 15%;
     height: 96%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    text-align: center;
-
+    
+    width: 20%;
     border: 1px solid #3F88C5;
     border-radius: 10px;
     padding: 25px;
@@ -27,9 +22,9 @@
 .timetable_body{
     box-sizing: border-box;
     position: relative;
-    left: 7%;
+    left: 2%;
     top: 3%;
-    width: 70%;
+    width: 76%;
     height: 96%;
     display: flex;
     align-items: center;
@@ -40,4 +35,30 @@
     border-radius: 10px;
     padding: 25px;
 
+}
+
+p{
+    color:var(--color-text);
+}
+
+label{
+    color:var(--color-text);
+}
+
+.change_type_info{
+    width: 12vw;
+    height: 7vh;
+
+    background: #42494D;
+    border: 1px solid #3F88C5;
+    border-radius: 10px;
+    color: #F6F7EB;;
+}
+
+input{
+    border: 1px solid #3F88C5;
+    border-radius: 10px;
+    margin-top: 5px;
+    margin-bottom: 10px;
+    /* width: 90%; */
 }
