--- a/web-site/timetable-mirea/src/App.css
+++ b/web-site/timetable-mirea/src/App.css
@@ -37,6 +37,7 @@ body {
   scroll-behavior: smooth;
   text-rendering: optimizeSpeed;
   line-height: 1.5;
+  overflow: overlay;
 }
 
 /* Удаляем стандартную стилизацию для всех ul и il, у которых есть атрибут class*/
