--- a/web-site/timetable-mirea/src/index.css
+++ b/web-site/timetable-mirea/src/index.css
@@ -11,7 +11,7 @@ html[data-theme='dark']{
 /* ----------------------Светлая тема---------------------- */
 html[data-theme='light']{
     --background-color-main: #F6F7EB;
-    --color-text: #42494D;
+    --color-text: #181a1b;
     
     }
 
