--- a/web-site/timetable-mirea/src/pages/Setting/Setting.module.css
+++ b/web-site/timetable-mirea/src/pages/Setting/Setting.module.css
@@ -11,7 +11,7 @@
 
 .container{
   width: 70%;
-  height: 70%;
+  height: 85%;
   display: flex;
   flex-direction: column;
   justify-content:left;
@@ -41,6 +41,7 @@
   align-items:baseline;
   text-align: center;
   border-bottom: 1px solid #3F88C5;
+  padding: 10px;
 }
 
 .group{
@@ -57,4 +58,14 @@ button{
   background-color: #42494D;
   border: 0.5px solid #3F88C5;
   border-radius: 10px;
+}
+
+.account{
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content:center;
+  align-items:center;
+  flex-direction: row;
+  padding: 10px;
 }
