--- a/web-site/timetable-mirea/src/pages/TimeTable/TimeTable.css
+++ b/web-site/timetable-mirea/src/pages/TimeTable/TimeTable.css
@@ -1,47 +1,54 @@
-.timetable_main{
-    padding: 10px;
+/* Общие стили */
+
+.timetable_main {
     position: relative;
     width: 100vw;
     min-height: 98vh;
     height: auto;
     background: var(--background-color-main);
     display: flex;
+    font-size: 1vw;
 }
 
-.timetable_panel{
+.timetable_panel {
     box-sizing: border-box;
     position: relative;
     left: 1%;
     top: 3%;
-    height: 500px;
-    width: 20%;
-    border: 1px solid #3F88C5;
-    border-radius: 10px;
-    padding: 25px;
+    height: auto;
+    width: 30vw;
+    border: 0.02vw solid #3F88C5;
+    border-radius: 1vw;
+    padding: 2.5vw;
 }
 
-p{
-    color:var(--color-text);
+h1 {
+    font-size: 2vw;
 }
 
-label{
-    color:var(--color-text);
+p {
+    color: var(--color-text);
 }
 
-.change_type_info{
+label {
+    color: var(--color-text);
+}
+
+.change_type_info {
     width: 12vw;
     height: 7vh;
     background: #42494D;
-    border: 1px solid #3F88C5;
-    border-radius: 10px;
-    color: #F6F7EB;;
+    border: 0.02vw solid #3F88C5;
+    border-radius: 1vw;
+    color: #F6F7EB;
 }
 
-input{
-    border: 1px solid #3F88C5;
-    border-radius: 10px;
-    margin-top: 5px;
-    margin-bottom: 10px;
+input {
+    max-width: 19vw;
+    border: 0.02vw solid #3F88C5;
+    border-radius: 1vw;
+    margin-top: 0.5vh;
+    margin-bottom: 1vh;
 }
 
 .timetable_body {
@@ -49,73 +56,159 @@ input{
     left: 2%;
     top: 3%;
     z-index: 7;
-    width: 85vw;
-    
+    width: 80vw;
 }
 
 .timetable_body_wrapper {
     z-index: 7;
     max-width: 95%;
     display: flex;
-    align-items:flex-start;
-    justify-content:flex-start;
-}
-.timetable_table{
-    border-radius: 10px;
-    border: 1px solid #3F88C5;
-    position: relative;
-    left: 1%;
-    
+    align-items: flex-start;
+    justify-content: flex-start;
 }
 
-.timetable_table_day{
-    border-radius: 10px;
-    border: 1px solid #3F88C5;
+.timetable_table {
+    border-radius: 1vw;
+    border: 0.02vw solid #3F88C5;
     position: relative;
     left: 1%;
-    width: 1000px;
 }
 
-.timetable_elem{
+.timetable_table_day {
+    border-radius: 1vw;
+    border: 0.02vw solid #3F88C5;
+    position: relative;
+    left: 1%;
+    width: 90vw;
+}
+
+.timetable_elem {
     min-width: 18%;
-    
-    /* border-bottom: 1px solid #3F88C5; */
 }
 
-.th_head{
-    border-bottom: 1px solid #3F88C5;
+.th_head {
+    border-bottom: 0.02vw solid #3F88C5;
 }
 
-.timetable_elem_tr{
-    border-bottom: 1px solid #3F88C5;
-    margin: 3px;
-    padding: 5px;
-    
+.timetable_elem_tr {
+    border-bottom: 0.02vw solid #3F88C5;
+    margin: 0.75vw;
+    padding: 1.25vw;
 }
-.timetable_elem_tr_in{
+
+.timetable_elem_tr_in {
     background-color: #393E410D;
-    border-radius: 15px;
-    min-height: 200px;
+    border-radius: 1.5vw;
+    min-height: 20vh;
 }
 
-.timetable_elem_tr_in_day{
+.timetable_elem_tr_in_day {
     background-color: #393E410D;
-    border-radius: 15px;
-    min-height: 130px;
+    border-radius: 1.5vw;
+    min-height: 13vh;
 }
 
-.num{
+.num {
     display: flex;
-    align-items:center;
-    justify-content:center;
+    align-items: center;
+    justify-content: center;
 }
 
-.lec{
+.lec {
     color: #393E41B2;
 }
 
-.ni{
+.ni {
     position: relative;
-    top: 10px;
+    top: 1vh;
+}
 
+/* Адаптивность для размеров экрана от 768px и выше */
+
+@media (min-width: 768px) {
+    .timetable_main {
+        font-size: 1.6vw;
+    }
+  
+    .timetable_panel {
+        width: 30vw;
+        padding: 2vw;
+    }
+  
+    .change_type_info {
+        font-size: 1vw;
+    }
+  
+    input {
+        font-size: 0.9vw;
+    }
+  
+    .timetable_body {
+        width: 85vw;
+    }
+  
+    .timetable_elem {
+        min-width: 15%;
+    }
+}
+
+/* Адаптивность для размеров экрана от 480px до 767px */
+
+@media (min-width: 480px) and (max-width: 767px) {
+    .timetable_main {
+        font-size: 2vw;
+    }
+  
+    .timetable_panel {
+        width: 30vw;
+        padding: 1.5vw;
+    }
+  
+    .change_type_info {
+        font-size: 0.8vw;
+    }
+  
+    input {
+        font-size: 0.7vw;
+    }
+  
+    .timetable_body {
+        width: 90vw;
+    }
+  
+    .timetable_elem {
+        min-width: 12%;
+    }
+}
+
+/* Адаптивность для размеров экрана до 479px */
+
+@media (max-width: 479px) {
+    .timetable_main {
+        font-size: 2vw;
+    }
+  
+    .timetable_panel {
+        width: 40vw;
+        padding: 1vw;
+    }
+  
+    .change_type_info {
+        font-size: 0.7vw;
+        width: 100%;
+        height: 5vh;
+    }
+  
+    input {
+        font-size: 0.6vw;
+        max-width: 30vw;
+    }
+  
+    .timetable_body {
+        width: 95vw;
+    }
+  
+    .timetable_elem {
+        min-width: 10%;
+    }
 }
